--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
     </div>
     
 
-    
+    <h1 class = "middle-heading">Heading</h1>
+
+    <div class = "image-flexbox">
+        <div class = "images">Imagie 1 </div>
+        <div class = "images">Imagie 2 </div>
+        <div class = "images">Imagie 3 </div>
+        <div class = "images image-4">Imagie 4 </div>    
+    </div>
+
+
 </body>
 
 
