--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
     <h1 class = "middle-heading">Heading</h1>
 
-    <div class = "image-flexbox">
-        <div class = "images">Imagie 1 </div>
-        <div class = "images">Imagie 2 </div>
-        <div class = "images">Imagie 3 </div>
-        <div class = "images image-4">Imagie 4 </div>    
+    <div class = "box-flexbox">
+        <div class = "box"> <img src="" alt=""> <text>Text</text></div>
+        <div class = "box"> <img src="" alt="">  <text>Text</text> </div>
+        <div class = "box"> <img src="" alt="">  <text>Text</text> </div>
+        <div class = "box"> <img src="" alt="">  <text>Text</text> </div>    
     </div>
 
 
