added the quote seciton of the code

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
     </div>
 
 
+
+
+    <div class = "quote-box">
+        <text class = "quote"> This is an inspiring quote, or a testimonial for a customer
+            . Maybe its just filling up space, or maybe people will actually read it
+            .who Knows? ALl I know is that it looks nice.
+        </text>
+        <text class = "Auther">-Thor, god of Thunder</text>
+    </div>
+
 </body>
 
 
