added the last part which is the sign up div for the website

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
         <text class = "Auther">-Thor, god of Thunder</text>
     </div>
 
+    <div class = "action-flex">
+        <div class = "action-item">
+            <div class = "heading">Call to action! it's time!</div>
+            <div class = "subheading">sign up for our product by clicking that button right over there! </div>
+            <button class = "button">Sign up</button>
+
+        </div>
+
+    </div>
 </body>
 
 
